# Alps

./: .gitignore  ARTICLE_GUIDELINES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  update_toc.py
.github/workflows/: update-readme.yml
articles/: TEMPLATE.md
articles/computer-vision/: understanding-cnns.md  体素网格降采样.md
articles/high-performance-computing/: README.md  cuda-fundamentals.md
articles/machine-learning/: transformer-architecture.md
articles/programming/: functional-programming.md  modern-design-patterns.md
articles/robotics/: path-planning.md  sensor-fusion.md
assets/images/: generate_header.txt
notes/: 2025-01-01-随便写写.md  2025-11-26-LivoxViewer2感觉有BUG.md  2025-11-26-为什么我的image_raw是绿色.md  2025-11-26-屌丝专用Terminal.md  2025-11-28-点云配准.md  2025-11-29-Transformer源码实现与优秀博客.md  2025-12-01-再识CMake.md  2025-12-01-再识SLAM.md  2025-12-01-初识SLAM.md  2025-12-02-三维空间刚体运动.md  2025-12-31-新年快乐.md  2026-01-24-Install mamba-ssm.md  2026-01-24-Install_mamba-ssm.md  2026-01-24-RL&MineCraft.md  2026-01-24-RL.md  2026-02-03-嵌入式软件-电控笔记.md
notes/2025-11-26-关于 /: image_raw.md
resource/code/: Awesome-Terminal.sh
resource/code/useEigen/: 3dVector.cpp  CMakeLists.txt  compile_commands.json  eigenMatrix.cpp  useGeometry.cpp
resources/: README.md
resources/code/: README.md
resources/datasets/: README.md
resources/demos/: README.md
resources/docs/: README.md
scripts/: update_readme.py
